- Add `findChromPeaksIsolationWindow` method for `MsExperiment` and
  `XcmsExperiment`.
- Make `reconstructChromPeakSpectra` a method.
- Add `reconstructChromPeakSpectra` implementation for `XcmsExperiment`.
- Add `filterIsolationWindow` for `MsExperiment` and `XcmsExperiment` to filter
  spectra (and eventually chromatographic peaks) based on the isolation window.


Changes in version 3.99.1
----------------------

- `featureSummary` and `overlappingFeatures` gain support for `XcmsExperiment`.
- Fix in `featureChromatograms` to ensure a valid object is returned.


Changes in version 3.99.0
----------------------

- Add `XcmsExperiment` and support for `MsExperiment`/`Spectra`: add all
  functionality for a full xcms processing on a `MsExperiment` object.
- Fix issue in `refineChromPeaks` with `MergeNeighboringPeaksParam` where a
  wrong apex position was considered in the evaluation whether candidate peaks
  should be merged (would only happen for merging of > 2 candidate peaks).
- Re-write the `reconstructChromPeakSpectra` for DIA data analysis to fix an
  issue with chromatographic peaks in overlapping SWATH isolation windows and
  generally to improve performance.

Changes in version 3.21.5
---------------------

- Fix issue in `chromatogram` after filtering a result object (issue #511).

Changes in version 3.21.4
---------------------

- Move multtest from Suggests to Imports in dependencies

Changes in version 3.21.3
---------------------

- Only fixes in the long running tests

Changes in version 3.21.2
---------------------

Changes in version 3.21.1
---------------------

- Fix error with `fillChromPeaks` on sparse data (many empty spectra) and peak
  detection performed with `MatchedFilterParam` (issue #653).
- Update to newer function names in the `rgl` package (issue #654).

Changes in version 3.19.2
----------------------

- Update/expand documentation for the `firstBaselineCheck` parameter of
  centWave.

Changes in version 3.19.1